kura/distrib/src/main/resources/common/iptables/iptables
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:input-kura - [0:0]
:output-kura - [0:0]
:postrouting-kura - [0:0]
:postrouting-kura-pf - [0:0]
:postrouting-kura-ipf - [0:0]
:prerouting-kura - [0:0]
:prerouting-kura-pf - [0:0]
-I PREROUTING -j prerouting-kura
-I prerouting-kura -j prerouting-kura-pf
-I INPUT -j input-kura
-I OUTPUT -j output-kura
-I POSTROUTING -j postrouting-kura
-I postrouting-kura -j postrouting-kura-pf
-I postrouting-kura -j postrouting-kura-ipf
-A prerouting-kura -j RETURN
-A input-kura -j RETURN
-A output-kura -j RETURN
-A postrouting-kura -o ETH_INTERFACE_0 -j MASQUERADE
-A postrouting-kura -j RETURN
-A postrouting-kura-pf -j RETURN
-A postrouting-kura-ipf -j RETURN
-A prerouting-kura-pf -j RETURN
COMMIT
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:input-kura - [0:0]
:output-kura - [0:0]
:forward-kura - [0:0]
:forward-kura-pf - [0:0]
:forward-kura-ipf - [0:0]
-I INPUT -j input-kura
-I FORWARD -j forward-kura
-I OUTPUT -j output-kura
-I forward-kura -j forward-kura-pf
-I forward-kura -j forward-kura-ipf
-A input-kura -i WIFI_INTERFACE_0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A input-kura -i ETH_INTERFACE_0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A input-kura -i WIFI_INTERFACE_0 -p udp -m udp --dport 67 -j ACCEPT
-A input-kura -i ETH_INTERFACE_0 -p udp -m udp --dport 67 -j ACCEPT
-A input-kura -i WIFI_INTERFACE_0 -p udp -m udp --dport 53 -j ACCEPT
-A input-kura -i ETH_INTERFACE_0 -p udp -m udp --dport 53 -j ACCEPT
-A input-kura -s 127.0.0.1/32 -p tcp -m tcp --dport 5002 -j ACCEPT
-A input-kura -i WIFI_INTERFACE_0 -p tcp -m tcp --dport 1450 -j ACCEPT
-A input-kura -i ETH_INTERFACE_0 -p tcp -m tcp --dport 1450 -j ACCEPT
-A input-kura -i WIFI_INTERFACE_0 -p tcp -m tcp --dport 443 -j ACCEPT
-A input-kura -i ETH_INTERFACE_0 -p tcp -m tcp --dport 443 -j ACCEPT
-A input-kura -i WIFI_INTERFACE_0 -p tcp -m tcp --dport 4443 -j ACCEPT
-A input-kura -i ETH_INTERFACE_0 -p tcp -m tcp --dport 4443 -j ACCEPT
-A input-kura -i WIFI_INTERFACE_0 -p tcp -m tcp --dport 22 -j ACCEPT
-A input-kura -i ETH_INTERFACE_0 -p tcp -m tcp --dport 22 -j ACCEPT
-A input-kura -i lo -j ACCEPT
-A input-kura -m state --state RELATED,ESTABLISHED -j ACCEPT
-A input-kura -j RETURN
-A forward-kura -i ETH_INTERFACE_0 -o WIFI_INTERFACE_0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A forward-kura -i WIFI_INTERFACE_0 -o ETH_INTERFACE_0 -j ACCEPT
-A forward-kura -j RETURN
-A output-kura -j RETURN
-A forward-kura-pf -j RETURN
-A forward-kura-ipf -j RETURN
COMMIT
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:forward-kura - [0:0]
:input-kura - [0:0]
:output-kura - [0:0]
:postrouting-kura - [0:0]
:prerouting-kura - [0:0]
-A PREROUTING -j prerouting-kura
-A INPUT -j input-kura
-A FORWARD -j forward-kura
-A OUTPUT -j output-kura
-A POSTROUTING -j postrouting-kura
-A forward-kura -j RETURN
-A input-kura -j RETURN
-A output-kura -j RETURN
-A postrouting-kura -j RETURN
-A prerouting-kura -m conntrack --ctstate INVALID -j DROP
-A prerouting-kura -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j DROP
-A prerouting-kura -p tcp -m conntrack --ctstate NEW -m tcpmss ! --mss 536:65535 -j DROP
-A prerouting-kura -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP
-A prerouting-kura -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A prerouting-kura -p tcp -m tcp --tcp-flags FIN,RST FIN,RST -j DROP
-A prerouting-kura -p tcp -m tcp --tcp-flags FIN,ACK FIN -j DROP
-A prerouting-kura -p tcp -m tcp --tcp-flags ACK,URG URG -j DROP
-A prerouting-kura -p tcp -m tcp --tcp-flags PSH,ACK PSH -j DROP
-A prerouting-kura -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A prerouting-kura -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A prerouting-kura -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j DROP
-A prerouting-kura -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,PSH,URG -j DROP
-A prerouting-kura -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -j DROP
-A prerouting-kura -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -j DROP
-A prerouting-kura -f -j DROP
-A prerouting-kura -j RETURN
COMMIT
