kura/distrib/src/main/resources/common/iptables/iptables-intelup2
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:input-kura - [0:0]
:output-kura - [0:0]
:postrouting-kura - [0:0]
:postrouting-kura-pf - [0:0]
:postrouting-kura-ipf - [0:0]
:prerouting-kura - [0:0]
:prerouting-kura-pf - [0:0]
-I PREROUTING -j prerouting-kura
-I prerouting-kura -j prerouting-kura-pf
-I INPUT -j input-kura
-I OUTPUT -j output-kura
-I POSTROUTING -j postrouting-kura
-I postrouting-kura -j postrouting-kura-pf
-I postrouting-kura -j postrouting-kura-ipf
-A prerouting-kura -j RETURN
-A input-kura -j RETURN
-A output-kura -j RETURN
-A postrouting-kura -o enp3s0 -j MASQUERADE
-A postrouting-kura -j RETURN
-A postrouting-kura-pf -j RETURN
-A postrouting-kura-ipf -j RETURN
-A prerouting-kura-pf -j RETURN
COMMIT
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:input-kura - [0:0]
:output-kura - [0:0]
:forward-kura - [0:0]
:forward-kura-pf - [0:0]
:forward-kura-ipf - [0:0]
-I INPUT -j input-kura
-I FORWARD -j forward-kura
-I OUTPUT -j output-kura
-I forward-kura -j forward-kura-pf
-I forward-kura -j forward-kura-ipf
-A input-kura -i enp3s0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A input-kura -i enp2s0 -p tcp -m tcp --dport 8000 -j ACCEPT
-A input-kura -i enp3s0 -p udp -m udp --dport 67 -j ACCEPT
-A input-kura -i enp2s0 -p udp -m udp --dport 67 -j ACCEPT
-A input-kura -i wlp4s0 -p udp -m udp --dport 67 -j ACCEPT
-A input-kura -i enp3s0 -p udp -m udp --dport 53 -j ACCEPT
-A input-kura -i enp2s0 -p udp -m udp --dport 53 -j ACCEPT
-A input-kura -i wlp4s0 -p udp -m udp --dport 53 -j ACCEPT
-A input-kura -s 127.0.0.1/32 -p tcp -m tcp --dport 5002 -j ACCEPT
-A input-kura -i enp3s0 -p tcp -m tcp --dport 1450 -j ACCEPT
-A input-kura -i enp2s0 -p tcp -m tcp --dport 1450 -j ACCEPT
-A input-kura -i enp3s0 -p tcp -m tcp --dport 443 -j ACCEPT
-A input-kura -i enp2s0 -p tcp -m tcp --dport 443 -j ACCEPT
-A input-kura -i enp3s0 -p tcp -m tcp --dport 4443 -j ACCEPT
-A input-kura -i enp2s0 -p tcp -m tcp --dport 4443 -j ACCEPT
-A input-kura -i enp3s0 -p tcp -m tcp --dport 22 -j ACCEPT
-A input-kura -i enp2s0 -p tcp -m tcp --dport 22 -j ACCEPT
-A input-kura -i enp3s0 -p udp -m udp --dport 5353 -j ACCEPT
-A input-kura -i enp2s0 -p udp -m udp --dport 5353 -j ACCEPT
-A input-kura -i lo -j ACCEPT
-A input-kura -m state --state RELATED,ESTABLISHED -j ACCEPT
-A input-kura -p icmp -m icmp --icmp-type 8 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A input-kura -j RETURN
-A forward-kura -i enp3s0 -o enp2s0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A forward-kura -i enp2s0 -o enp3s0 -j ACCEPT
-A forward-kura -j RETURN
-A output-kura -p icmp -m icmp --icmp-type 0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A output-kura -j RETURN
-A forward-kura-pf -j RETURN
-A forward-kura-ipf -j RETURN
COMMIT
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:input-kura - [0:0]
:output-kura - [0:0]
:forward-kura - [0:0]
:postrouting-kura - [0:0]
:prerouting-kura - [0:0]
-I PREROUTING -j prerouting-kura
-I INPUT -j input-kura
-I OUTPUT -j output-kura
-I FORWARD -j forward-kura
-I POSTROUTING -j postrouting-kura
-A prerouting-kura -j RETURN
-A input-kura -j RETURN
-A output-kura -j RETURN
-A forward-kura -j RETURN
-A postrouting-kura -j RETURN
COMMIT
